tests/errors/semicolonSeparator.milo
// @error: can't appear inside an expression
// A trailing/separating ';' is a tolerated no-op (Milo is newline-delimited),
// but a ';' inside an expression is still a parse error.
fn f(): void {
    let x = 1 +
}

fn main(): i32 {
    return 0
}
